# ghostcore

./: .gitignore  ControlCore_Whitepaper.tex  README.md  ghostrouter.toml  pyproject.toml
ControlCore/: __init__.py  boot.py  bouncer.py  circuit_breaker.py  cli.py  config.py  daemon.py  job_registry.py  law.py  normalize.py  observability.py  redaction.py  schemas.py
ControlCore/adapters/: __init__.py  cloud.py  cpu.py  executor.py  interface.py  ollama.py  remote.py  sandbox.py
ControlCore/registry/: __init__.py  budget.py  dial.py  fallback.py  loader.py  preferences.py  routing.py  schema.py
config/: registry.json
docs/: 00-INDEX.md
tests/: test_budget.py  test_cloud_adapters.py  test_dial.py  test_executor.py  test_executor_writeback.py  test_fallback.py  test_preferences.py  test_redaction.py  test_routing.py  test_routing_intelligent.py
