[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostrouter"
version = "0.1.0"
description = "The LLM router that learns — intelligent routing, fallback, circuit breakers, budget tracking, 10+ providers"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "Adam Thomas", email = "adam@ghostlogic.dev"}
]
keywords = ["llm", "router", "orchestration", "routing", "anthropic", "openai", "ai", "learning", "budget"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.25.0",
    "uvicorn>=0.24.0",
    "starlette>=0.32.0",
    "structlog>=23.0.0",
    "click>=8.0.0",
    "maelspine>=0.1.1",
]

[project.urls]
Homepage = "https://github.com/adam-scott-thomas/ghostrouter"
Repository = "https://github.com/adam-scott-thomas/ghostrouter"
Issues = "https://github.com/adam-scott-thomas/ghostrouter/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.21.0",
    "httpx>=0.25.0",
]

[project.scripts]
ghostrouter = "ControlCore.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (may require network access, slower)",
]
